<resources>
    <string name="app_name">practica1</string>
    <string name="main_button_text_hello">saludar</string>
    <string name="hello">Hola Servicios moviles</string>
    <string name="autenticacion_user">User</string>
    <string name="autenticacion_user_hint">Username</string>
    <string name="autenticacion_pass_hint">********</string>
    <string name="autenticacion_pass">Password</string>
    <string name="autenticacion_ip">IP Address</string>
    <string name="autenticacion_ip_hint">127.0.0.1</string>
    <string name="autenticacion_port_hint">Port</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
