<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="wrap_content"
                    android:ems="5"
                    android:text="@string/autenticacion_user"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    tools:hint="@string/autenticacion_user_hint" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="wrap_content"
                    android:ems="5"
                    android:text="@string/autenticacion_pass"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"

                    android:inputType="textPassword"
                    tools:hint="@string/autenticacion_pass_hint" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="wrap_content"
                    android:ems="5"
                    android:text="@string/autenticacion_ip"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textPersonName"
                    tools:hint="@string/autenticacion_ip_hint" />
                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textPersonName"
                    tools:hint="@string/autenticacion_port_hint" />
            </TableRow>




        </TableLayout>
    </LinearLayout>



</RelativeLayout>